--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "tcg/voyager": "^1.0"
+        "tcg/voyager": "^1.0",
+        "khill/lavacharts" : "3.0.*"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
