validation in user information change

--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,11 @@
     "require": {
         "php": ">=7.0.0",
         "fideloper/proxy": "~3.3",
+        "intervention/image": "^2.4",
+        "khill/lavacharts": "3.0.*",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "tcg/voyager": "^1.0",
-        "khill/lavacharts": "3.0.*"
+        "tcg/voyager": "^1.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
